# prexCoreDevChallenge

./: README.md
challengePrex/: Cargo.toml
challenge_prex/: Cargo.toml  Collection_PREX_Challenge.postman_collection.json
challenge_prex/src/: controladores.rs  main.rs  models.rs  repository.rs  request_dto.rs  response_dto.rs  servicios.rs
