[package]
name = "challenge_prex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
tokio = { version = "1", features = ["full"] }
